--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My Third Website</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem natus repellat necessitatibus accusamus eaque placeat vitae eveniet animi veritatis quae, odit molestiae illum tenetur sunt asperiores maxime voluptatibus obcaecati ullam!</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
