added a picture for testing if it works properly

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>My first illustrator work</h3>
+        <img src="Images/1.gif" alt="">
+    </div>
 </body>
 </html>
